--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,9 +12,9 @@ html {
 }
 
 .container {
-    max-width: 80vw;
+    max-width: 90vw;
     margin: 20px auto;
-    padding: 0 10px;
+    padding: 0 5px;
 }
 
 .header-row {
@@ -29,11 +29,13 @@ html {
     margin: 30px 0 0 6vw;
 }
 
-.about-wrapper {
+.title-wrapper {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
+    min-width: 50vw;
 }
 
 .section-info {
@@ -48,7 +50,7 @@ html {
     align-items: center;
     border-radius: 100px;
     background: #eaffb2;
-    width: 35px;
+    width: 40px;
     height: 35px;
     margin: 20px 10px 5px;
     position: relative;
@@ -58,7 +60,7 @@ html {
     width: 20px;
     position: absolute;
     top: 7px;
-    left: 7px;
+    left: 8px;
 }
 
 .section-title {
@@ -66,6 +68,37 @@ html {
     width: 45vw;
 }
 
-.about-box {
+.section-info-box {
     margin: 0 0 40px;
+}
+
+.containers-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.container-left {
+    width: 30vw;
+    border-right: 2px solid #0c1b17;
+    background-color: #eaffb0;
+}
+
+.left-section-title {
+    margin-left: 20px;
+}
+
+.left-section-title h2 {
+    align-items: center;
+}
+
+.container-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 55vw;
 }
