--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,16 +20,22 @@ html {
 .header-row {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     align-items: center;
+    background-color: rgba(238, 238, 238, 0.959);
+}
+
+.header-row_intro {
+    margin: 0 auto
 }
 
 .intro-photo {
-    border-radius: 100px;
+    border-radius: 150px;
     max-width: 15vw;
     margin: 30px 0 0 6vw;
 }
 
-.title-wrapper {
+.section-wrapper {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -69,29 +75,67 @@ html {
 }
 
 .section-info-box {
-    margin: 0 0 40px;
+    margin: 0 0 20px;
+    width: 100%;
 }
 
 .containers-wrapper {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    align-items: center;
     flex-wrap: wrap;
 }
 
 .container-left {
     width: 30vw;
     border-right: 2px solid #0c1b17;
-    background-color: #eaffb0;
 }
 
 .left-section-title {
     margin-left: 20px;
+    background-color: #eaffb0;
+    height: 30px;
 }
 
 .left-section-title h2 {
     align-items: center;
+    margin-left: 20px;
+}
+
+.section-list {
+    list-style: none;
+}
+
+.contact-icon {
+    align-items: center;
+    border-radius: 100px;
+    background: #eaffb2;
+    width: 25px;
+    height: 25px;
+    margin: 0;
+    position: relative;
+}
+
+.contact-item {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.contact-icon_img {
+    width: 15px;
+    position: absolute;
+    top: 5px;
+    left: 5px;
+}
+
+.contact-title {
+    margin-left: 5px;
+}
+
+a {
+    text-decoration: none;
 }
 
 .container-right {
@@ -100,5 +144,32 @@ html {
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-    width: 55vw;
+    width: 50vw;
+}
+
+.section-info-edu-box {
+    width: 100%;
+    margin-left: -55px;
+}
+
+footer {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: rgba(238, 238, 238, 0.959);
+    width: 90vw;
+    margin: 0 auto;
+}
+
+.footer-git-box {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 80px;
+}
+
+.footer-rs-icon {
+    margin: 20px;
+    min-width: 100px;
 }
