--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,7 @@ html {
 }
 
 .section-info-box {
-    margin: 0 0 20px;
+    margin: 20px 0;
     width: 100%;
 }
 
@@ -87,12 +87,11 @@ html {
 }
 
 .container-left {
-    width: 30vw;
+    min-width: 260px;
     border-right: 2px solid #0c1b17;
 }
 
 .left-section-title {
-    margin-left: 20px;
     background-color: #eaffb0;
     height: 30px;
 }
@@ -103,6 +102,7 @@ html {
 }
 
 .section-list {
+    padding-right: 10px;
     list-style: none;
 }
 
@@ -119,7 +119,6 @@ html {
 .contact-item {
     display: flex;
     flex-direction: row;
-    align-items: center;
     margin-bottom: 10px;
 }
 
@@ -144,7 +143,7 @@ a {
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-    width: 50vw;
+    width: 55vw;
 }
 
 .section-info-edu-box {
